--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-server --mode development --open --hot",
+    "start": "webpack serve --mode development --open --hot",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -15,15 +15,17 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "css-loader": "^6.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-server": "^0.1.2"
+    "webpack-dev-server": "^4.2.1"
   }
 }
