--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production"
+    "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
+    "build": "webpack --config ./webpack.config.js --env mode=prod"
   },
   "keywords": [],
   "author": "Marharyta Malets",
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.14.5",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
