--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -11,6 +11,7 @@
   "author": "Marharyta Malets",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
