--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -27,7 +27,9 @@
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "react-awesome-modal": "^2.0.5",
     "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
