--- a/home-task-react-v1/tsconfig.json
+++ b/home-task-react-v1/tsconfig.json
@@ -10,6 +10,7 @@
     "target": "es6",
     "lib": ["es2017", "dom"],
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots" : ["node_modules/@types", "src/types"]
   },
 }
