--- a/home-task-react-v1/tsconfig.json
+++ b/home-task-react-v1/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "strict": true,
     "module": "commonjs",
     "resolveJsonModule": true,
     "sourceMap": true,
