--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -11,9 +11,15 @@
   "author": "Marharyta Malets",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
