--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
     "@types/redux": "^3.6.0",
+    "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
