--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -16,6 +16,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "elevate-ui": "^1.2.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
