--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -15,12 +15,13 @@
     "@types/react-redux": "^7.1.20",
     "@types/redux": "^3.6.0",
     "axios": "^0.24.0",
-    "formik": "^2.2.9",
     "elevate-ui": "^1.2.4",
+    "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
