--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -21,7 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
@@ -32,12 +32,14 @@
     "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.2",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "react-awesome-modal": "^2.0.5",
+    "react-router": "^6.0.1",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
