--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -32,6 +32,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
