--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -18,6 +18,7 @@
     "elevate-ui": "^1.2.4",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
