--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod"
   },
@@ -13,16 +14,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
-    "@types/redux": "^3.6.0",
-    "axios": "^0.24.0",
-    "elevate-ui": "^1.2.4",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
-    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
@@ -31,15 +28,17 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@svgr/webpack": "^5.5.0",
+    "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.17",
+    "@types/react-router": "^3.0.19",
     "@types/react-router-dom": "^5.3.2",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.3.1",
     "react-awesome-modal": "^2.0.5",
     "react-router": "^6.0.1",
     "style-loader": "^3.2.1",
