--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod"
+    "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Marharyta Malets",
@@ -14,12 +14,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.2",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
@@ -39,6 +40,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.3.1",
+    "querystring": "^0.2.1",
     "react-awesome-modal": "^2.0.5",
     "react-router": "^6.0.1",
     "style-loader": "^3.2.1",
