--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -14,14 +14,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
+    "@types/react-select": "2.0.17",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "i": "^0.3.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-select-component": "^4.1.13",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-select": "2.4.3",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -32,7 +37,6 @@
     "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^3.0.19",
     "@types/react-router-dom": "^5.3.2",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -42,7 +46,6 @@
     "jest": "^27.3.1",
     "querystring": "^0.2.1",
     "react-awesome-modal": "^2.0.5",
-    "react-router": "^6.0.1",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
