--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "Marharyta Malets",
   "license": "ISC",
+  "transform": {
+    "\\.js$": "<rootDir>/node_modules/babel-jest"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
@@ -31,10 +34,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
+    "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
@@ -47,8 +53,9 @@
     "querystring": "^0.2.1",
     "react-awesome-modal": "^2.0.5",
     "style-loader": "^3.2.1",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
