--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -6,50 +6,50 @@
   "scripts": {
     "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "test": "jest"
+    "test": "jest --env=jsdom",
+    "test-coverage": "jest --coverage --no-cache"
   },
   "keywords": [],
   "author": "Marharyta Malets",
   "license": "ISC",
-  "transform": {
-    "\\.js$": "<rootDir>/node_modules/babel-jest"
-  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
     "@types/react-select": "2.0.17",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
-    "i": "^0.3.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-multi-select-component": "^4.1.13",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-select": "2.4.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
+    "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
-    "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "jest-transform-stub": "^2.0.0",
     "querystring": "^0.2.1",
     "react-awesome-modal": "^2.0.5",
     "style-loader": "^3.2.1",
