--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "test": "jest --env=jsdom",
+    "test": "jest",
     "test-coverage": "jest --coverage --no-cache"
   },
   "keywords": [],
