--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-select": "2.0.17",
     "axios": "^0.24.0",
+    "cypress": "^9.0.0",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -35,6 +36,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.27",
