--- a/home-task-react-v1/tsconfig.json
+++ b/home-task-react-v1/tsconfig.json
@@ -9,9 +9,30 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "target": "es6",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx",
-    "typeRoots" : ["node_modules/@types", "src/types"]
+    "jsx": "preserve",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
