--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -4,11 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --hot --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "test": "jest",
-    "test-coverage": "jest --coverage --no-cache",
-    "e2e": "cypress open",
     "dev": "next"
   },
   "keywords": [],
@@ -41,6 +36,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.0",
+    "@babel/template": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^12.1.2",
