--- a/home-task-react-v1/package.json
+++ b/home-task-react-v1/package.json
@@ -19,6 +19,7 @@
     "cypress": "^9.0.0",
     "formik": "^2.2.9",
     "next": "^12.0.4",
+    "nextjs": "^0.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -57,6 +58,7 @@
     "jest-transform-stub": "^2.0.0",
     "less": "^4.1.2",
     "less-loader": "5",
+    "next.js": "^1.0.3",
     "querystring": "^0.2.1",
     "react-awesome-modal": "^2.0.5",
     "style-loader": "^3.2.1",
